# NSSDPlib

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README_CN.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
docs/development/: api_contracts.md  architecture.md  development_flow.md  directory_layout.md  project_plan.md  requirements.md  tech_stack.md
examples/: README.md  registry.py  run_all.py
examples/_shared/: cli.py  io.py  metrics.py  rng.py  toy_data.py
examples/basic/: 00_config_and_seed.py  01_mechanism_sanity.py  02_accountant_basics.py  03_composition_quickstart.py
examples/cdp_examples/: 10_query_engine_count_sum.py  11_query_engine_mean_var.py  12_histogram_range.py  13_sensitivity_and_calibrator.py  14_reporting_privacy_utility.py
examples/end_to_end/: 30_ldp_app_frequency_estimation.py  31_ldp_app_heavy_hitters.py  32_ldp_app_range_queries.py  33_cross_module_accounting.py  34_cdp_pipeline.py  35_ldp_full_pipeline.py  40_dataset_smoke_cdp.py
examples/ldp_examples/: 20_categorical_frequency_grr.py  21_unary_oue_frequency.py  22_olh_frequency.py  23_rappor_bloom.py  24_continuous_mean.py  25_multiround_composition.py  26_user_level_merge.py
src/dplib/: __init__.py
src/dplib/cdp/: __init__.py
src/dplib/cdp/analytics/: __init__.py
src/dplib/cdp/analytics/postprocessing/: __init__.py  (+1 more)
src/dplib/cdp/composition/: __init__.py  advanced.py  basic.py  budget_scheduler.py  composition_theorems.py  moment_accountant.py  privacy_accountant.py
src/dplib/cdp/mechanisms/: __init__.py  exponential.py  gaussian.py  geometric.py  laplace.py  mechanism_factory.py  mechanism_registry.py  staircase.py  vector.py
src/dplib/cdp/ml/: __init__.py  config.py  exceptions.py  types.py  utils.py
src/dplib/cdp/sensitivity/: __init__.py  global_sensitivity.py  noise_calibrator.py  sensitivity_analyzer.py  sensitivity_bounds.py
src/dplib/core/: __init__.py
src/dplib/core/data/: __init__.py  data_validation.py  dataset.py  domain.py  sensitivity.py  statistics.py  transformers.py
src/dplib/core/privacy/: __init__.py  base_mechanism.py  budget_tracker.py  composition.py  privacy_accountant.py  privacy_guarantee.py  privacy_model.py
src/dplib/core/utils/: __init__.py  config.py  logging.py  math_utils.py  param_validation.py  performance.py  random.py  serialization.py
src/dplib/ldp/: __init__.py  ldp_utils.py  types.py
src/dplib/ldp/aggregators/: __init__.py  aggregator_factory.py  base.py  consistency.py  frequency.py  mean.py  quantile.py  user_level.py  variance.py
src/dplib/ldp/applications/: __init__.py  application_factory.py  base.py  frequency_estimation.py  heavy_hitters.py  key_value.py  marginals.py  range_queries.py  sequence_analysis.py
src/dplib/ldp/composition/: __init__.py  compose.py  ldp_cdp_mapping.py  privacy_accountant.py
src/dplib/ldp/encoders/: __init__.py  base.py  bloom_filter.py  categorical.py  encoder_factory.py  hashing.py  numerical.py  sketch.py  unary.py
src/dplib/ldp/mechanisms/: __init__.py  base.py  grr.py  mechanism_factory.py  mechanism_registry.py  oue.py
tests/: conftest.py
tests/integration/: test_cdp_query_accountant.py  test_cdp_reporting_and_synthetic.py  test_ldp_accountant_bridge.py  test_ldp_applications.py  test_ldp_interop.py  test_optional_dependencies.py
tests/property_based/: __init__.py  conftest.py  test_cdp_analytics.py  test_cdp_composition_advanced.py  test_cdp_mechanisms.py  test_cdp_sensitivity.py  test_cdp_synthetic_data.py  test_core_data.py  test_core_privacy.py  test_infrastructure.py  test_ldp_accountant.py  test_ldp_aggregators.py  test_ldp_applications.py  test_ldp_composition.py  test_ldp_encoders.py  test_ldp_encoders_extended.py  test_ldp_extended.py  test_ldp_mechanisms.py  test_mechanisms_base.py  test_reporting.py  test_utils.py
tests/unit/test_cdp/test_analytics/: test_base_generator.py  test_queries.py  test_query_engine.py  test_reporting.py  test_synthetic_methods.py
tests/unit/test_cdp/test_composition/: test_advanced.py  test_basic.py  test_budget_scheduler.py  test_moment_accountant.py  test_privacy_accountant.py
tests/unit/test_cdp/test_mechanisms/: test_exponential.py  test_gaussian.py  test_geometric.py  test_laplace.py  test_mechanism_factory_registry.py  test_staircase.py  test_vector.py
tests/unit/test_cdp/test_ml/: test_backends.py  test_config.py  test_sklearn_wrapper.py  test_types.py
tests/unit/test_cdp/test_sensitivity/: test_global_sensitivity.py  test_noise_calibrator.py  test_sensitivity_analyzer.py  test_sensitivity_bounds.py
tests/unit/test_core/: test_base_mechanism.py  test_composition.py  test_dataset.py  test_domain.py  test_validation.py
tests/unit/test_core/test_data/: test_data_validation.py  test_sensitivity.py  test_statistics.py  test_transformers.py
tests/unit/test_core/test_privacy/: test_budget_tracker.py  test_privacy_accountant.py  test_privacy_guarantee.py  test_privacy_model.py
tests/unit/test_core/test_utils/: test_config.py  test_logging.py  test_math_utils.py  test_param_validation.py  test_performance.py  test_random.py  test_serialization.py
tests/unit/test_ldp/: __init__.py  test_types.py
tests/unit/test_ldp/test_aggregators/: __init__.py  test_consistency_aggregator.py  test_frequency_aggregator.py  test_mean_aggregator.py  test_quantile_aggregator.py  test_user_level_aggregator.py  test_variance_aggregator.py
tests/unit/test_ldp/test_applications/: __init__.py  test_frequency_estimation.py  test_heavy_hitters.py  test_key_value.py  test_marginals.py  test_range_queries.py  test_sequence_analysis.py
tests/unit/test_ldp/test_composition/: __init__.py  test_compose.py  test_privacy_accountant.py
tests/unit/test_ldp/test_encoders/: __init__.py  test_bloom_filter_encoder.py  test_categorical_encoder.py  test_hashing_encoder.py  test_numerical_encoder.py  test_sketch_encoder.py  test_unary_encoder.py
tests/unit/test_ldp/test_mechanisms/: __init__.py  test_continuous_mechanisms.py  test_grr.py  test_olh.py  test_oue.py  test_rappor.py  test_unary_randomizer.py
(+33 files in other folders)
