[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dplib"
version = "0.1.0"
description = "NSSDPlib: Modular CDP + LDP differential privacy library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ct", email = "851320384@qq.com" }]
keywords = ["differential-privacy", "dp", "cdp", "ldp"]

# 基础依赖，所有模块共用
dependencies = [
    "numpy>=1.24",          # 数值计算核心
    "scipy>=1.10"           # 概率分布与统计函数
]

# 可选模块依赖
[project.optional-dependencies]

# 核心模块：数据抽象、隐私模型、工具函数
core = [
    "pandas>=2.0",          # 数据处理与结构化接口
    "tqdm>=4.65",           # 进度条与批处理日志
]

# CDP模块：中心化差分隐私功能 + 机器学习
cdp = [
    "scikit-learn>=1.2",    # 模型评估与基准算法
    "tensorflow>=2.12",     # 深度学习训练接口
    "torch>=2.1",           # 通用机器学习与 DP-SGD 支持
    "pandas>=2.0",          # 数据处理与结构化接口
    "matplotlib>=3.7",      # 可视化与报告输出
]

# LDP模块：本地差分隐私功能
ldp = [
    "bitarray>=2.5",        # 位级数据表示
    "xxhash>=3.2",          # 高速哈希
    "pandas>=2.0",          # 数据处理与结构化接口
]

# 开发依赖
dev = [
    "pytest>=7.0",          # 测试框架
    "pytest-cov>=4.0",      # 测试覆盖率报告
    "flake8>=6.0",          # 代码风格检查
    "black>=23.3",          # 代码格式化
    "isort>=6.0",           # 导入排序
    "mypy>=1.5",            # 类型检查
    "pre-commit>=3.3",      # 提交前代码检查
    "build>=1.0",           # 打包工具
]

# 全部模块：CDP + LDP + ML + examples + docs + dev
all = [
    # Core
    "numpy>=1.24",          # 数值计算核心
    "scipy>=1.10",          # 概率分布与统计函数
    "pandas>=2.0",          # 数据处理与结构化接口
    "tqdm>=4.65",           # 进度条与批处理日志
    
    # CDP
    "scikit-learn>=1.2",    # 模型评估与基准算法
    "tensorflow>=2.12",     # 深度学习训练接口
    "torch>=2.1",           # 通用机器学习与 DP-SGD 支持
    "matplotlib>=3.7",      # 可视化与报告输出

    # LDP
    "bitarray>=2.5",        # 位级数据表示
    "xxhash>=3.2",          # 高速哈希
    "datasketch>=1.5.2",    # LDP/聚合近似算法支持
    "mmh3>=3.0.0",          # MurmurHash 实现，用于哈希机制

    # Docs & Examples
    "sphinx>=5.0",              # 文档生成
    "sphinx-rtd-theme>=1.2",    # 文档主题
    "jupyter>=1.0",             # 教程与实验交互环境

    # Testing & Dev
    "pytest>=7.0",          # 测试框架
    "pytest-cov>=4.0",      # 测试覆盖率报告
    "black>=23.3",          # 代码格式化
    "isort>=6.0",           # 导入排序
    "pre-commit>=3.3",      # 提交前代码检查
    "flake8>=6.0",          # 代码风格检查
    "mypy>=1.5",            # 类型检查
    "build>=1.0",           # 打包工具
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "benchmarks*"]
