[metadata]
name = dplib
version = 0.1.0
description = NSSDPlib: Modular CDP + LDP differential privacy library
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9

[options.extras_require]
core =
    # 核心模块：数据抽象、隐私模型、工具函数
    pandas>=2.0
    tqdm>=4.65

cdp =
    # CDP模块：中心化差分隐私 + 机器学习
    scikit-learn>=1.2
    tensorflow>=2.12
    torch>=2.1
    pandas>=2.0
    matplotlib>=3.7

ldp =
    # LDP模块：本地差分隐私
    bitarray>=2.5
    xxhash>=3.2
    pandas>=2.0

all =
    # 全部模块：core + CDP + LDP + docs/examples/dev
    numpy>=1.24
    scipy>=1.10
    pandas>=2.0
    tqdm>=4.65
    scikit-learn>=1.2
    tensorflow>=2.12
    torch>=2.1
    matplotlib>=3.7
    bitarray>=2.5
    xxhash>=3.2
    sphinx>=5.0
    sphinx-rtd-theme>=1.2
    jupyter>=1.0
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.3
    isort>=6.0
    pre-commit>=3.3

[tool:pytest]
minversion = 7.0
addopts = -q --maxfail=1
testpaths = tests
